packages/bun-usockets/src/libusockets.h

#define LIBUS_SOCKET_DESCRIPTOR SOCKET
#define LIBUS_SOCKET_DESCRIPTOR int
/* Library types publicly available */
struct us_socket_t;
struct us_timer_t;
struct us_loop_t;
struct us_udp_socket_t;
struct ssl_st;
/* Creates a (heavy-weight) UDP socket with a user space ring buffer. Again, this one is heavy weight and
 * shoud be reused. One entire QUIC server can be implemented using only one single UDP socket so weight
 * is not a concern as is the case for TCP sockets which are 1-to-1 with TCP connections. */
//struct us_udp_socket_t *us_create_udp_socket(us_loop_r loop, void (*read_cb)(struct us_udp_socket_t *), unsigned short port);

//struct us_udp_socket_t *us_create_udp_socket(us_loop_r loop, void (*data_cb)(struct us_udp_socket_t *, struct us_udp_packet_buffer_t *, int), void (*drain_cb)(struct us_udp_socket_t *), char *host, unsigned short port);

struct us_udp_socket_t *us_create_udp_socket(us_loop_r loop, void (*data_cb)(struct us_udp_socket_t *, void *, int), void (*drain_cb)(struct us_udp_socket_t *), void (*close_cb)(struct us_udp_socket_t *), void (*recv_error_cb)(struct us_udp_socket_t *, int, int), const char *host, unsigned short port, int flags, int *err, void *user);
/* Adopts an already created (and usually already bound) UDP socket descriptor
 * instead of creating a new one. The fd is made non-blocking and the standard
 * receive-path options are applied. Returns null with *err set on failure. */
struct us_udp_socket_t *us_create_udp_socket_from_fd(us_loop_r loop, void (*data_cb)(struct us_udp_socket_t *, void *, int), void (*drain_cb)(struct us_udp_socket_t *), void (*close_cb)(struct us_udp_socket_t *), void (*recv_error_cb)(struct us_udp_socket_t *, int, int), LIBUS_SOCKET_DESCRIPTOR fd, int shared, int *err, void *user);
/* Arm a timer with a delay from now and eventually a repeat delay.
 * Specify 0 as repeat delay to disable repeating. Specify both 0 to disarm. */
void us_timer_set(struct us_timer_t *timer, void (*cb)(struct us_timer_t *t), int ms, int repeat_ms);
/* Same, but also attaches a fresh SSL* built from ssl_ctx (which is up_ref'd
 * for the lifetime of the socket). Used for STARTTLS / Bun.connect upgrade.
 * sni may be NULL. */
struct us_socket_t *us_socket_adopt_tls(us_socket_r s, us_socket_group_r group,
    unsigned char kind, struct ssl_ctx_st *ssl_ctx, const char *sni,
    int is_client, int request_cert, int reject_unauthorized,
    int old_ext_size, int ext_size) __attribute__((nonnull(1, 2, 4)));
/* Feed bytes that were already read off the wire (e.g. a ClientHello consumed
 * by the plain-TCP layer before the socket was adopted into TLS) through the
 * same decrypt path as bytes arriving from the kernel. */
struct us_socket_t *us_socket_tls_feed(us_socket_r s, const char *data, int length) __attribute__((nonnull(1)));
/* ── Listen ───────────────────────────────────────────────────────────────
 * The listener owns: an embedded group for accepted sockets, the SSL_CTX
 * (borrowed ref, optional), the SNI tree (optional), and the kind to stamp on
 * accepted sockets. */
struct us_listen_socket_t *us_socket_group_listen(us_socket_group_r group,
    unsigned char kind, struct ssl_ctx_st *ssl_ctx,
    const char *host, int port, int options, int socket_ext_size, int *error)
    __attribute__((nonnull(1, 8)));  /* ssl_ctx, host nullable */
struct us_listen_socket_t *us_socket_group_listen_unix(us_socket_group_r group,
    unsigned char kind, struct ssl_ctx_st *ssl_ctx,
    const char *path, size_t pathlen, int options, int socket_ext_size, int *error)
    __attribute__((nonnull(1, 4, 8)));  /* ssl_ctx nullable */
struct us_listen_socket_t *us_socket_group_listen_fd(us_socket_group_r group,
    unsigned char kind, struct ssl_ctx_st *ssl_ctx,
    LIBUS_SOCKET_DESCRIPTOR fd, int backlog, int options, int socket_ext_size, int *error)
    __attribute__((nonnull(1, 8)));  /* ssl_ctx nullable */
struct us_socket_t *us_socket_group_connect_unix(us_socket_group_r group,
    unsigned char kind, struct ssl_ctx_st *ssl_ctx,
    const char *server_path, size_t pathlen, int options, int socket_ext_size)
    __attribute__((nonnull(1, 4)));  /* ssl_ctx nullable */
/* Per-SSL session sink: each resumable session reaching the new-session
 * callback is SSL_SESSION_up_ref'd and handed to on_new_session (which takes
 * ownership of that reference). on_free(owner) runs once on SSL_free. */
void us_ssl_set_session_sink(struct ssl_st *ssl, void *owner,
                             void (*on_new_session)(void *, struct ssl_session_st *),
                             void (*on_free)(void *));
/* Public interfaces for loops */

/* Returns a new event loop with user data extension */
struct us_loop_t *us_create_loop(void *hint, void (*wakeup_cb)(us_loop_r loop),
    void (*pre_cb)(us_loop_r loop), void (*post_cb)(us_loop_r loop), unsigned int ext_size);
/* ── Public interfaces for sockets ────────────────────────────────────────
 * No `int ssl` selector — TLS is per-socket (`s->ssl != NULL`). */

/* SSL* if TLS, else (void*)(intptr_t)fd. */
void *us_socket_get_native_handle(us_socket_r s) nonnull_fn_decl;
/* Plaintext write (TLS-encrypts if `s->ssl`). Returns bytes accepted; on
 * partial write the next on_writable will fire. */
int us_socket_write(us_socket_r s, const char *nonnull_arg data, int length) nonnull_fn_decl;
int us_socket_write2(us_socket_r s, const char *header, int header_length, const char *payload, int payload_length) nonnull_fn_decl;
int us_socket_raw_write(us_socket_r s, const char *data, int length);
void us_socket_timeout(us_socket_r s, unsigned int seconds) nonnull_fn_decl;
void us_socket_long_timeout(us_socket_r s, unsigned int minutes) nonnull_fn_decl;
void *us_socket_ext(us_socket_r s) nonnull_fn_decl;
void us_socket_flush(us_socket_r s) nonnull_fn_decl;
void us_socket_shutdown(us_socket_r s) nonnull_fn_decl;
void us_socket_shutdown_read(us_socket_r s) nonnull_fn_decl;
int us_socket_is_shut_down(us_socket_r s) nonnull_fn_decl;
int us_socket_is_closed(us_socket_r s) nonnull_fn_decl;
struct us_socket_t *us_socket_close(us_socket_r s, int code, void *reason) __attribute__((nonnull(1)));
int us_socket_local_port(us_socket_r s) nonnull_fn_decl;
int us_socket_remote_port(us_socket_r s) nonnull_fn_decl;
void us_socket_remote_address(us_socket_r s, char *nonnull_arg buf, int *nonnull_arg length) nonnull_fn_decl;
void us_socket_local_address(us_socket_r s, char *nonnull_arg buf, int *nonnull_arg length) nonnull_fn_decl;
int us_socket_ipc_write_fd(us_socket_r s, const char *data, int length, int fd) nonnull_fn_decl;
void us_socket_sendfile_needs_more(us_socket_r s) nonnull_fn_decl;
LIBUS_SOCKET_DESCRIPTOR us_socket_get_fd(us_socket_r s) nonnull_fn_decl;
struct us_socket_t *us_socket_from_fd(us_socket_group_r group, unsigned char kind, struct ssl_ctx_st *ssl_ctx, int socket_ext_size, LIBUS_SOCKET_DESCRIPTOR fd, int options, int ipc)
    __attribute__((nonnull(1)));  /* ssl_ctx nullable */
struct us_socket_t *us_socket_open(struct us_socket_t *s, int is_client, char *ip, int ip_length);
void us_socket_nodelay(us_socket_r s, int enabled);
int us_socket_keepalive(us_socket_r s, int enabled, unsigned int delay);
void us_socket_resume(us_socket_r s);
void us_socket_pause(us_socket_r s);